certifications page added

--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,27 @@
 /* styles.css */
 
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: black;
+    padding-bottom: 50px; /* Added padding for the fixed navigation bar */
+    overflow-y: auto; /* Enable vertical scrolling */
+
 }
 
 header {
-    background-color:  rgb(20, 238, 216); /* HotPink */; 
-    color: white;
+    background-color: rgb(255, 126, 255);
+    color: black;
     text-align: center;
     padding: 1em;
 }
 
 nav {
-    background-color: rgb(20, 238, 216); /* HotPink */
+    background-color: rgb(249, 102, 249);
     padding: 20px;
-    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 nav ul {
@@ -34,10 +38,6 @@ nav li {
 
 section {
     margin: 20px;
-    padding: 20px;
-    background-color: rgb(61, 243, 243); /* LavenderBlush */
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 label {
@@ -46,9 +46,6 @@ label {
 
 input {
     margin-bottom: 10px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
 }
 
 ul {
@@ -75,28 +72,43 @@ li {
 }
 
 #education ul li {
-    padding: 10px;
-    background-color: rgb(61, 243, 243); /* Pink */
-    border-radius: 8px;
+    padding: 5px;
+    background-color: pink;
+    border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .home {
-    background-color: rgb(150, 220, 230); /* LightPink */
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: pink;
 }
 
-/* Additional styles for the Projects page */
-#project-list li {
-    padding: 20px;
-    background-color: rgb(163, 210, 232); /* LightPink */
-    margin-bottom: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+#certifications {
+    margin: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-#about_me{
+.certification {
+    background-color: pink;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+}
+
+.certification h2 {
+    color: #333;
+}
+
+.certification p {
+    color: #666;
+}
+
+
+/* Additional styles for the content container */
+.content-container {
+    max-width: 800px;
+    margin: 0 auto;
 }
